<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"

    tools:context="com.example.sorin.gompare.LoginActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_activity_password_hint"
        android:ems="10"
        android:id="@+id/input_password"
        android:textSize="14sp"
        android:textColorHint="@android:color/background_light"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/input_username"
        />

    <Button
        android:text="@string/login_activity_login_text"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_below="@+id/input_password"
        android:layout_marginTop="17dp"
        android:id="@+id/login_button"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/input_password"
        android:layout_alignEnd="@+id/input_password"
        android:background="@android:color/background_light"
        android:textColor="@android:color/background_dark" />



    <Button
        android:text="@string/login_activity_browse_as_guest"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="17dp"
        android:id="@+id/browse_as_guest"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/input_password"
        android:layout_alignEnd="@+id/input_password"
        android:layout_centerHorizontal="true"
        android:background="@android:color/background_light"
        android:textColor="@android:color/background_dark" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/content_description"
        android:id="@+id/app_logo_1"
        android:layout_above="@+id/input_username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_title_gompare"
        android:textStyle="bold"
        android:layout_marginStart="25dp"
        android:id="@+id/top_gompare_string"
        android:textColor="@android:color/background_light"
        android:layout_above="@+id/app_logo_1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textSize="30sp" />

    <Button
        android:text="@string/login_activity_create_account"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:id="@+id/create_an_account"
        android:background="?android:attr/textColorSecondaryInverseNoDisable"
        android:textColor="@android:color/background_light"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/browse_as_guest"
        android:layout_marginBottom="34dp"
        android:layout_alignEnd="@+id/browse_as_guest" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/login_activity_username_hint"
        android:ems="10"
        android:id="@+id/input_username"
        android:textSize="14sp"
        android:textColorHint="@android:color/background_light"
        android:layout_above="@+id/input_password"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
